chatty-cathy-ingress.yml
apiVersion: v1
kind: Ingress
metadata:
  name: chatty-cathy-ingress
  labels:
    app: chatty-cathy
    resource: chatty-cathy-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/websocket-services: chat-service

    # nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   proxy_http_version 1.1;
    #   proxy_set_header Upgrade $http_upgrade;
    #   proxy_set_header Connection "upgrade";
    #   proxy_set_header Host $host;
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: frontend-service
              servicePort: 8080
          - path: /api/messages/
            backend:
              serviceName: chat-service
              servicePort: 4000
          - path: /socket/messages/
            backend:
              serviceName: chat-service
              servicePort: 4000
